# pytest-req

./: CHANGES.md  README.md  generate-logo.py  pyproject.toml
pytest_req/: assertions.py  config.py  log.py  plugin.py
pytest_req/utils/: diff.py
tests/: conftest.py  test_assert.py  test_base_url.py  test_req.py  test_session.py
