[tool.poetry]
name = "pytest-req"
version = "0.1.0"
description = "pytest requests plugin"
authors = ["bugmaster <defnngj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
loguru = "^0.7.2"
requests = "^2.32.3"
pytest = "^8.3.1"
pytest-base-url = "^2.1.0"

[tool.poetry.plugins."pytest11"]
req = "pytest_req.plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"