[tool.poetry]
name = "pytest-req"
version = "0.3.0"
description = "pytest requests plugin"
authors = ["bugmaster <defnngj@gmail.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing"
]

[tool.poetry.dependencies]
python = ">=3.8"
loguru = "^0.7.2"
requests = "^2.32.3"
pytest = "^8.3.2"
pytest-base-url = "^2.1.0"
jmespath = "^1.0.1"

[tool.poetry.plugins."pytest11"]
req = "pytest_req.plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"